# TaskManager

./: CMakeLists.txt
include/: MainWindow.h  Task.h  TaskManager.h  utils.h
src/: MainWindow.cpp  Task.cpp  TaskManager.cpp  main.cpp  utils.cpp
tests/: test_Task.cpp  test_TaskManager.cpp  test_utils.cpp
